# ChessBuilder

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  board.py  chessBuilder.py  clock.py  game.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: pypi-publish.yml
docs/plans/: 2026-02-25-bugfix-overhaul-design.md  2026-02-25-bugfix-overhaul-plan.md  2026-02-28-training-improvements-design.md  2026-02-28-training-improvements.md  2026-03-01-fix-training-rewards-design.md  2026-03-01-fix-training-rewards.md  2026-03-01-parallel-training-design.md  2026-03-01-parallel-training.md
src/: __init__.py  ai.py  board.py  chessBuilder.py  clock.py  game.py  main.py
tests/: __init__.py  test_board.py  test_clock.py  test_game.py  test_main.py  test_stockfish_opponent.py  test_training.py
training/: dataset.py  debug.py  gpu_setup.py  interative_training.py  main.py  model.py  proof_run.py  selfplay.py  stockfish_opponent.py  train.py
