[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chessbuilder"
version = "0.1.1"
description = "A chess game builder with customizable rules and mechanics"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "BadgKat", email = "badgkat@proton.me" }
]
keywords = ["chess", "game", "pygame"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "pygame>=2.6.1",
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/badgkat/chessbuilder"
Repository = "https://github.com/badgkat/chessbuilder.git"
"Bug Tracker" = "https://github.com/badgkat/chessbuilder/issues"

[project.scripts]
chessbuilder = "chessbuilder.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3
